tests/fixtures/valid/main.vt
fn negation(x: i32): i32 {
    return -x;
}

fn add(a: i32, b: i32): i32 {
    return a + b;
}

fn test(a: i32): i32 {
    let x = negation(add(10, a));
    return x;
}
