tests/fixtures/invalid/arity_too_many.vt
fn add(a: i32, b: i32): i32 {
    return a + b;
}

fn test(): i32 {
    let x = add(1, 2, 3);
    return x;
}
